Fix some code and make jUnit tests